2010-08-14  Vadim Kurland  <vadim@vk.crocodile.org>

	* FirewallInstallerProcurve.cpp (FirewallInstallerProcurve::packInstallJobsList): 
	Policy installer for HP Procurve. Currently only works in line-by-line
	mode (no support for scp). Tested with Procurve firmware K14.31 on
	ProCurve J9470A Switch 3500-24. Caveat: manager access should not be
	configured with user name (that is, no "password manager user-name foo")

	* set version to 4.1.1
	
2010-08-10  Vadim Kurland  <vadim@vk.crocodile.org>

	* v4.1.0 released

2010-08-08  Vadim Kurland  <vadim@vk.crocodile.org>

	* ObjectManipulator_ops.cpp (ObjectManipulator::actuallyDeleteObject):
	fixed #1674 "Crash while using Undo Stack". Operation "Cut" should be
	represented by an undo macro object and should appear as one operation
	on the undo stack.

	* ObjectManipulator.cpp (ObjectManipulator::getMenuState): fixed #1676
	"Crash when deleting an interface that has multiple IP addresses
	and not all addresses are selected for deletion"

2010-08-06  vadim  <vadim@vk.crocodile.org>

	* ObjectManipulator_tree_ops.cpp (ObjectManipulator::clearObjects):
	fixed crash that happened on Mac if the GUI was started with a
	file name as command line argument. The issue was introduced recently
	when GUI state update was reimplemented as an event.

2010-08-05  Vadim Kurland  <vadim@vk.crocodile.org>

	* ProjectPanel_events.cpp (event): fixed #1660 "Crash when
	cut-and-pasting firewall between libraries". GUI crashed if user
	performed the following sequence: cut an object, switch to a
	different object library, try to paste using keyboard shortcut
	Ctrl-V while library object was selected in the tree.

2010-08-04  Vadim Kurland  <vadim@vk.crocodile.org>

	* IPTImporter.cpp (IPTImporter::finalize): fixed #1664 "Policy
	import creates firewall object w/o version". This also fixes
	crash reported in SF bug #3036934

	* pixAdvancedDialog.cpp (pixAdvancedDialog::displayCommands):